--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,14 +13,15 @@ source:
 
 build:
   number: 1000
-  script: python setup.py install --single-version-externally-managed --record record.txt
+  script: python -m pip install --ignore-installed --no-deps .
   skip: True  # [win and py2k]
 
 requirements:
   build:
+    - {{ compiler('c') }}
+  host:
     - python
-    - setuptools
-    
+    - pip
   run:
     - python
     - six
