--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,9 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
+  patches:
+    # This patch was necessary to avoid to use gcc and g++ directly. Replaced to use CC and CXX.
+    - conda.patch
 
 build:
   number: 1000
@@ -24,6 +27,7 @@ requirements:
   host:
     - python
     - pip
+    - six
 
   run:
     - python
