--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1000
+  number: 1001
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv"
   skip: True  # [win and py2k]
 
@@ -37,10 +37,7 @@ about:
   home: https://github.com/dahlia/libsass-python
   license: MIT
   license_family: MIT
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'    
-  # A pull request has been made to add LICENSE to manifest.in on libsass repo,
-  # so after next release on pypi, we can use just "LICENSE" as the license_file
-  # This is the link to that PR: https://github.com/dahlia/libsass-python/pull/216
+  license_file: 'LICENSE'
   summary: 'A straightforward binding of libsass for Python. Compile Sass/SCSS in Python with no Ruby stack at all!'
   description: |
     This package provides a simple Python extension module sass which is binding 
