--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,9 +11,12 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 1000
+  number: 1001
+  entry_points:
+    - pysassc = pysassc:main
+    - sassc = sassc:main
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv"
-  skip: True  # [win and py2k]
+  skip: True  # [py2k]
 
 requirements:
   build:
