--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,7 @@ build:
   number: 1001
   entry_points:
     - pysassc = pysassc:main
+    - sassc = sassc:main
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv"
   skip: True  # [win and py2k]
 
@@ -34,7 +35,10 @@ requirements:
 test:
   imports:
     - sass
-    
+  commands:
+    - sassc --help
+    - pysassc --help
+
 about:
   home: https://github.com/dahlia/libsass-python
   license: MIT
