--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,13 +8,14 @@ package:
 source:
   url: https://github.com/sass/{{ name }}-python/releases/download/{{ version }}/{{ name }}-{{ version }}.tar.gz
   sha256: 3ab5ad18e47db560f4f0c09e3d28cf3bb1a44711257488ac2adad69f4f7f8425
+  patches:
+    - 472.patch
 
 build:
   number: 2
   entry_points:
     - pysassc = pysassc:main
   script: {{ PYTHON }} -m pip install . -vv
-  skip: true  # [win and py2k]
 
 requirements:
   build:
